# voxel

./: .clangd  .gitignore  CMakeLists.txt  ReadMe.md
assets/shaders/cubemap/: frag.glsl  vert.glsl
assets/shaders/default/: frag.glsl  vert.glsl
assets/shaders/framebuffer/: frag.glsl  vert.glsl
assets/shaders/greedy-mesh/: frag.glsl  geom.glsl  vert.glsl
include/: buffer.h  buffer_allocator.h  camera.h  chunk.h  chunk_compound.h  chunk_manager.h  debug_helper.h  geometry.h  gizmo.h  input.h  instance3D.h  instance_3d.h  light.h  log.h  material.h  mesh.h  misc.h  model.h  noise.h  physics_manager.h  renderer.h  resource_manager.h  shader.h  texture.h  transform.h  utils.h  window.h
include/core/: log.h  window.h
include/engine/: buffer.h  buffer_allocator.h  camera.h  geometry.h  gizmo.h  input.h  instance_3d.h  light.h  material.h  mesh.h  model.h  physics_manager.h  resource_manager.h  shader.h  texture.h  time.h
include/game/: chunk.h  chunk_compound.h  chunk_manager.h  misc.h  noise.h  renderer.h
src/: buffer.cpp  camera.cpp  instance3D.cpp  noise.cpp  shader.cpp  texture.cpp  transform.cpp  window.cpp
src/core/: main.cpp  window.cpp
src/engine/: buffer.cpp  buffer_allocator.cpp  camera.cpp  gizmo.cpp  input.cpp  instance3D.cpp  instance3d.cpp  material.cpp  mesh.cpp  model.cpp  physics_manager.cpp  shader.cpp  texture.cpp  transform.cpp
src/game/: chunk.cpp  chunk_compound.cpp  chunk_manager.cpp  noise.cpp  renderer.cpp
